--- a/AwanEcommerceWepApi/AwanEcommerce.WepApi.csproj
+++ b/AwanEcommerceWepApi/AwanEcommerce.WepApi.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AwanEcommerce.Domain\AwanEcommerce.Domain.csproj" />
+    <ProjectReference Include="..\AwanEcommerce.Infrastructure\AwanEcommerce.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
